# hitz11

./: .gitignore  README.md  pyproject.toml
.github/workflows/: hitz11.yml
hitz11/: README.md
hitz11/src/hitz11/: crawler.py
hitz11/tests/: test_crawler.py  test_telegram.py
src/hitz11/: __init__.py  config.py  db.py  main.py  models.py  selector.py  telegram_client.py
tests/: test_selector.py
